--- a/client/index.html
+++ b/client/index.html
@@ -18,5 +18,7 @@
     <script src="js/controllers/auth.js"></script>
     <script src="js/services/auth.js"></script>
     <script src="js/ui-bootstrap-tpls-2.1.3.min.js"></script>
+    <script src="js/ng-map.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyD4KpINDv4kkN0YXFosA81fYH6IywS_FzI"></script>
   </body>
 </html>
