--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <script src="vendor/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services/lb-services.js"></script>
-    <script src="js/controllers/auth.js"></script>
+    <script src="js/controllers/main.js"></script>
     <script src="js/services/auth.js"></script>
     <script src="js/ui-bootstrap-tpls-2.1.3.min.js"></script>
     <script src="js/ng-map.min.js"></script>
